<resources>
    <string name="app_name">MOPCON</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首頁</string>
    <string name="agenda">議程</string>
    <string name="task">任務</string>
    <string name="news">消息</string>
    <string name="more">更多</string>
    <string name="speech_information">演講資訊</string>
    <string name="date_10_15">10/15(六)</string>
    <string name="date_10_16">10/16(日)</string>
    <string name="i_want_to_listen_the_most">我最想聽</string>
    <string name="exchange_sessions">交流場次</string>
    <string name="all_of_the_agenda">全部議程</string>
    <string name="sponsor">贊助廠商</string>
    <string name="latest_news">最新消息</string>
    <string name="your_favorite_flight_is_arriving">你喜愛的戰艦即將進站</string>
    <string name="coming_soon">coming soon</string>
    <string name="you_did_not_store_any_agenda">你目前尚未收藏任何議程</string>
    <string name="get_around">去逛逛</string>
    <string name="see_more">查看更多</string>
    <string name="speaker_introduce">講者介紹</string>
    <string name="more_info">更多資訊</string>
    <string name="host_community">社群組織</string>
    <string name="speaker">講者</string>
    <string name="about_speaker">關於講者</string>
    <string name="speaker_info">講者資訊</string>
    <string name="sponsors_in_2022">2022 年度贊助夥伴</string>
    <string name="sponsor_agenda">贊助場次</string>
    <string name="sponsor_info">贊助商資訊</string>
    <string name="community">社群</string>
<!--    <string name="main_community">主辦社群</string>-->
    <string name="participant_community">參與社群</string>
<!--    <string name="volunteer_organization">志工組織</string>-->
    <string name="main_organization">主辦團隊</string>
    <string name="volunteer_footer_description">想要和我們一起改變南部資訊生態圈嗎？歡迎追蹤我們的 Facebook，我們會在下一屆準備開始前 PO 出徵才資訊！加入我們不僅有機會參與改變的過程，還可以得到寶貴的辦展經驗，認識大神們哦！</string>
    <string name="i_want_to_join_volunteer">我要加入志工行列</string>
    <string name="volunteer_info">志工資訊</string>
    <string name="volunteer_member">志工成員</string>
    <string name="game">大地遊戲</string>
    <string name="no_news">暫無消息</string>
    <string name="storeImageSucceed">儲存圖片成功</string>
    <string name="storeImageFailed">儲存圖片失敗，請再試一次</string>
    <string name="share_to">分享到</string>
    <string name="error_message">「太空船乖乖被吃掉了！請等待M孃來補貨。」</string>
</resources>