<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:id="@+id/llAgenda"
    android:orientation="vertical"
    tools:context=".ui.all.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:orientation="vertical"
        tools:context=".ui.all.home.HomeFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/agenda"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <org.mopcon.session.app.ui.common.TopRadioGroupBar
            android:id="@+id/rgTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:firstRbText="@string/date_10_15"
            app:secondRbText="@string/date_10_16"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_capsule_transparent_pink_stroke"
            app:tabIndicator="@drawable/button_capsule_pink_transparent40"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorGravity="stretch"
            app:tabMode="fixed"
            app:tabPaddingEnd="25dp"
            app:tabPaddingStart="25dp"
            app:tabRippleColor="@null"
            app:tabTextAppearance="@style/DateTabTextStyle"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_of_the_agenda" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange_sessions" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_want_to_listen_the_most" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            tools:itemCount="3"
            tools:listitem="@layout/item_agenda_content" />

    </LinearLayout>

</FrameLayout>